social tests finished